deploy/liveready-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: liveready
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: liveready
