deploy/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: liveready-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: liveready
spec:
  hosts:
  - "*"
  gateways:
  - liveready-gateway
  http:
  - route:
    - destination:
        host: liveready
        port: 
            number: 80
